fix lack of multi-page printing by adding overflow visible

--- a/arches/app/media/css/arches.scss
+++ b/arches/app/media/css/arches.scss
@@ -12480,6 +12480,10 @@ a.filter-tools:hover {
         display: none;
     }
 
+    * {
+        overflow: visible !important;
+    }
+
     #content-container {
         padding: 0 !important;
     }
